fix issues on small screens

--- a/src/ui-components/pagination/pagination.component.scss
+++ b/src/ui-components/pagination/pagination.component.scss
@@ -7,6 +7,7 @@
   background-color: $ui-02;
   position: absolute;
   bottom: 0;
+  min-width: 35.563rem;
   width: 100%;
   height: 3rem;
 }
@@ -33,4 +34,10 @@
   position: absolute;
   right: 0;
   border-top: 0.063rem solid $ui-03;
+  min-width: 15.125rem;
+}
+
+.pagination :nth-child(2),
+.pagination :nth-child(2) > div {
+  display: flex;
 }
